# voiceprompt

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Casks/: murmur.rb
Murmur/: Package.resolved  Package.swift
Murmur/Sources/Murmur/: AudioDevices.swift  AudioRecorder.swift  CleanMode.swift  CleanupModeStore.swift  CleanupModesView.swift  CleanupPrompts.swift  DictationController.swift  DictationStats.swift  DictionaryStore.swift  DictionaryView.swift  HistoryStore.swift  HistoryView.swift  HotkeyStateMachine.swift  KeychainStore.swift  MainWindow.swift  MurmurApp.swift  OnboardingModel.swift  OnboardingStep.swift  OnboardingView.swift  OnboardingWindowController.swift  OpenAICleaner.swift  Settings.swift  SettingsView.swift  StatsView.swift  Transcriber.swift  TranscriptPaster.swift  Vocabulary.swift  WaveformPill.swift
Murmur/Tests/MurmurTests/: AudioDeviceResolverTests.swift  AudioLevelTests.swift  CleanModeTests.swift  CleanupModeStoreTests.swift  CleanupPromptsTests.swift  DictationStatsTests.swift  DictionaryStoreTests.swift  FloatingPanelTests.swift  HistoryRetentionTests.swift  HistoryStoreTests.swift  HotkeyModifierTests.swift  HotkeyStateMachineTests.swift  KeychainStoreTests.swift  OnboardingModelTests.swift  OnboardingStepTests.swift  OpenAICleanerTests.swift  SettingsTests.swift  TranscriberIntegrationTests.swift  TranscriptPasterTests.swift  WaveformPillControllerTests.swift  WaveformPillModelTests.swift
plans/: PROCESS.md
plans/initial-plan/: DESIGN.md  progress.txt
plans/initial-plan/slices/: 01-tracer-bullet-dictation-pipeline.md  02-openai-cleanup-with-fallback.md  03-floating-waveform-pill.md  04-main-window-and-settings.md  05-history.md  06-dictionary-manager.md  07-cleanup-mode-editor.md  08-stats-dashboard.md  09-onboarding-wizard.md  10-packaging-and-distribution.md
scripts/: build-dmg.sh  verify-dmg.sh
src/voiceprompt/: app.py  cleaner.py  config.py  context.py  hotkey.py  icon.py  recorder.py  service.py  setup.py  transcriber.py  vocabulary.py
tests/: conftest.py  test_app.py  test_cleaner.py  test_hotkey.py  test_recorder.py  test_transcriber.py
