[project]
name = "voiceprompt"
version = "0.1.0"
description = "macOS menubar app: hold a hotkey, speak, get clean text pasted"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mlx-whisper",
    "sounddevice",
    "openai",
    "pyperclip",
    "rumps",
    "pynput",
    "pyobjc-framework-quartz",
    "numpy",
]

[project.scripts]
voiceprompt = "voiceprompt.app:main"
voiceprompt-setup = "voiceprompt.setup:main"
voiceprompt-uninstall = "voiceprompt.service:uninstall"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceprompt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
